fix wrapping, fade out long story titles

--- a/src/styl/common.styl
+++ b/src/styl/common.styl
@@ -19,7 +19,6 @@ article > section + section, article > section + aside {
   position: relative;
   overflow: hidden;
   background-color: lightest-grey;
-  transform: translateX(0);
   div {
     height: 100%;
     background-position: center;
